--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,8 @@ td{
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
+  font-size:70px;
+  font-family: 'Indie Flower', cursive;
 }
 table{
   border-collapse: collapse;
